<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Administrador Red</string>
    <string name="this_app_admon">Esta es la app del administrador</string>
    <string name="sign_off">Cerrar sesión</string>
    <string name="wait_a_moment" tools:ignore="Typos">Espere un momento…</string>
    <string name="new_package">Nuevo paquete</string>
    <string name="add">Agregar</string>
    <string name="add_package">Agregar paquete</string>
    <string name="delete">Eliminar</string>
    <string name="delete_package">¿Eliminar paquete?</string>
    <string name="update">Actualizar</string>
    <string name="update_package">Actualizar paquete</string>
    <string name="are_you_sure_to_take_this_action">¿Está seguro de realizar esta acción?</string>
    <string name="cancel">Cancelar</string>
    <string name="add_more_images">Agregar más imágenes</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="speed">Velocidad</string>
    <string name="limit">Límite</string>
    <string name="available">Disponibles</string>
    <string name="validity">Vigencia</string>
    <string name="error_uploading_image">Error al subir imagen.</string>
    <string name="package_added">Paquete agregado.</string>
    <string name="package_updated">Paquete actualizado.</string>
    <string name="failed_to_add_package">Error al agregar el paquete.</string>
    <string name="failed_to_update_package">Error al actualizar el paquete.</string>
    <string name="write_a_message">Escribe un mensaje…</string>
    <string name="technical_support">Soporte técnico</string>
    <string name="error_loading_chat_messages">Error al cargar los mensajes del chat.</string>
    <string name="error_clearing_message">Error al eliminar el mensaje.</string>
    <string name="message_deleted">Mensaje borrado exitosamente.</string>
    <string name="status">Estado</string>
    <string name="contract_id">ID de Contrato: %1$s</string>
    <string name="need_help">¿Necesitas ayuda?</string>
    <string name="total_price">Precio total: $%1$d MXN</string>
    <string name="failed_to_query_the_data">Error al consultar los datos.</string>
    <string name="failed_to_update_contract">Error al actualizar el contrato.</string>
    <string name="contract">Contrato</string>
    <string name="updated">actualizado</string>
    <string name="contract_status_on_hold">En espera…</string>
    <string name="contract_status_activated">Activado</string>
    <string name="contract_status_timed_out">Caducado</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="your_contract_is">Tu contrato está </string>
    <string name="unknown">Desconocido</string>
    <string name="failed_to_delete_image">Error al eliminar la imagen.</string>
    <string name="failed_to_remove_package">Error al eliminar el paquete.</string>
    <string name="offers_and_promotions">Ofertas y promociones</string>
    <string name="main_topic">new_offer_and_promotion</string>
    <string name="failed_to_log_out">Error al cerrar sesión.</string>
    <string name="see_you_soon">Nos vemos pronto.</string>
    <string name="error_code">Código de error</string>
    <string name="uploading_image">Subiendo imagen -></string>
    <string name="images_uploaded_successfully">Imágenes subidas correctamente.</string>
    <string name="image_upload_error">Error al subir la imagen.</string>
    <string name="welcome">Bienvenido</string>
    <string name="welcome_administrator">¡Bienvenido! Administrador de red</string>
    <string name="there_is_no_internet_conection">No hay conexión a internet.</string>
    <string name="you_have_logged_out">Has cerrado sesión.</string>
    <string name="of">de</string>
    <string name="title">Título</string>
    <string name="topic">Tema/Tópico</string>
    <string name="new_promotion">Nueva promoción</string>
    <string name="promotion_sent_to_all_users">Promoción enviada a los usuarios suscritos.</string>
    <string name="failed_to_send_the_promotion">Error al enviar la promoción.</string>
    <string name="contract_requests">Solicitudes de contratos</string>
    <string name="network_error">Error de red, verifique su conexion.</string>
    <string name="login_email">Correo electrónico</string>
    <string name="did_you_forget_your_password">¿Olvidaste tu contraseña?</string>
    <string name="you_do_not_have_an_account">¿No tienes cuenta?… Selecciona un método de autenticación para crear una.</string>
    <string name="login_google">Acceder con Google</string>
    <string name="this_field_is_required">Este campo es obligatorio.</string>
    <string name="search">Buscar</string>
    <string name="search_by_name">Buscar por nombre…</string>
    <string name="search_by_id">Buscar por ID…</string>
    <string name="without_results">Sin resultados.</string>
    <string name="last_update">Última actualización</string>
    <string name="current_version">Versión: 1.0</string>
    <string name="copyright">© Octubre - 2021</string>
    <string name="developed_by">Desarrollado por</string>
    <string name="eduardo">👨‍💻 Eduardo López Villegas</string>
    <string name="antonio">👨‍💻 Jesús Antonio García Zamudio</string>
    <string name="manuel">👨‍💻 Edgar Manuel Velázquez Valdes</string>
    <string name="about">Acerca de</string>
    <string name="sending_email">Enviando correo electrónico…</string>
    <string name="wait_a_moment_please" tools:ignore="Typos">Por favor, espere un momento…</string>
    <string name="email_sent_successfully">Correo electrónico enviado con éxito.</string>
    <string name="send">Enviar</string>
    <string name="message">Mensaje</string>
    <string name="email">Correo electrónico</string>
    <string name="subject">Asunto</string>
    <string name="complain">Queja</string>
    <string name="suggestion">Sugerencia</string>
    <string name="use_another_email">Utilizar otro correo electrónico</string>
    <string name="post_comments">Enviar comentarios</string>
    <string name="you_must_select_the_subject_type">Debe seleccionar el tipo de asunto.</string>
    <string name="error_sending_email">Error al enviar correo electrónico.</string>
    <string name="there_are_still_empty_fields">Aún hay campos vacíos.</string>
    <string name="you_have_connection">Tienes conexión.</string>
    <string name="no_network_connection">Sin conexión de red.</string>
    <string name="go_to_settings">Ir a configuración</string>
    <string name="hello">Hola</string>
    <string name="package_removed">Paquete eliminado.</string>
</resources>