<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_contract_requests"
        android:title="@string/contract_requests"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_promo"
        android:title="@string/offers_and_promotions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_off"
        app:showAsAction="never" />
</menu>